--- a/02-angular-rxjs/src/app/app.component.html
+++ b/02-angular-rxjs/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align: center">
   <h1>Search my posts!</h1>
-  <app-searchbox (value)="searchPosts($event)"></app-searchbox>
+  <app-searchbox #search></app-searchbox>
   <app-list>
     <app-card *ngFor="let post of posts" [item]="post"></app-card>
   </app-list>
