--- a/02-angular-rxjs/src/app/app.component.html
+++ b/02-angular-rxjs/src/app/app.component.html
@@ -3,6 +3,6 @@
   <h1>Search my posts!</h1>
   <app-searchbox #search></app-searchbox>
   <app-list>
-    <app-card *ngFor="let post of posts" [item]="post"></app-card>
+    <app-card *ngFor="let post of posts$ | async" [item]="post"></app-card>
   </app-list>
 </div>
